--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 
 /* Copyright 2017 The Chromium Authors
  * Use of this source code is governed by a BSD-style license that can be
@@ -62,6 +70,10 @@ html {
 .icon {
   background-repeat: no-repeat;
   background-size: 100%;
+}
+
+#canvas-wrapper {
+  height: 150px;
 }
 
 @media (prefers-color-scheme: dark) {
