--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@ canvas {
   box-shadow: 0 10px 20px rgba(0,0,0,0.2);
   border-radius: 0.75em 0.75em 0 0;
   overflow: hidden;
+  user-select: none;
 }
 
 .popup__title-bar {
@@ -43,7 +44,7 @@ canvas {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 3em;
+  font-size: 2.5em;
   line-height: 1.15;
   text-align: center;
   background: white;
